--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/Sam170703/NetherHosting#readme",
   "dependencies": {
-    "discord.js": "^14.6.0",
-    "fs": "^0.0.1-security"
+    "discord.js": "^14.6.0"
   }
 }
