--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Sam170703/NetherHosting#readme",
   "dependencies": {
     "discord.js": "^14.6.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "sourcebin": "^5.0.0"
   }
 }
