--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Sam170703/NetherHosting.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "SamuelVM#5390",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Sam170703/NetherHosting/issues"
